--- a/THANKS
+++ b/THANKS
@@ -41,6 +41,7 @@ support in Gnuastro. The list is ordered alphabetically (by family name).
     Alan Lefor                           alefor@astr.tohoku.ac.jp
     Guillaume Mahler                     guillaume.mahler@univ-lyon1.fr
     Francesco Montanari                  francesco.montanari@openmailbox.org
+    Dmitrii Oparin                       doparin2@gmail.com
     Bertrand Pain                        bertrand.pain@inserm.fr
     William Pence                        william.pence@nasa.gov
     Bob Proulx                           bob@proulx.com
