Corrected incorrect directory name in tutorial
The directory name of Segment's output in the tutorial was incorrectly
named `segment' in its first appearance, but in later occurrences its name
was `seg'.

This bug was found and reported by Teymoor Saifollahi.

--- a/THANKS
+++ b/THANKS
@@ -45,6 +45,7 @@ support in Gnuastro. The list is ordered alphabetically (by family name).
     Bertrand Pain                        bertrand.pain@inserm.fr
     William Pence                        william.pence@nasa.gov
     Bob Proulx                           bob@proulx.com
+    Teymoor Saifollahi                   teymur.saif@gmail.com
     Yahya Sefidbakht                     y.sefidbakht@gmail.com
     Alejandro Serrano Borlaff            asborlaff@ucm.es
     Lee Spitler                          lee.spitler@mq.edu.au
