Typo in option name fixed in tutorial
CosmicCalculator's `--arcsectandist' option was incorrectly written as
`--arcsectandisk' in the tutorial. It has been corrected.

This typo was found and reported by Valentina Abril-melgarejo.

--- a/THANKS
+++ b/THANKS
@@ -15,6 +15,7 @@ The following people provided valuable feedback (suggestions, ideas) to the
 authors of Gnuastro. We hereby gratefully acknowledge their help and
 support in Gnuastro. The list is ordered alphabetically (by family name).
 
+    Valentina Abril-melgarejo            valentina.abril@lam.fr
     Marjan Akbari                        mrjakbari@gmail.com
     Roland Bacon                         roland.bacon@univ-lyon1.fr
     Karl Berry                           karl@gnu.org
