Corrected bug in measuring colors in tutorial
In the new system of using the Match program for finding colors, we had
forgot to set a color criterion to pull out the reddest objects. The
condition has been added.

This bug was found and reported by Geoffry Krouchi.

--- a/THANKS
+++ b/THANKS
@@ -35,6 +35,7 @@ support in Gnuastro. The list is ordered alphabetically (by family name).
     Raúl Infante Sainz                   infantesainz@gmail.com
     Brandon Invergo                      brandon@gnu.org
     Aurélien Jarno                       aurelien.jarno@univ-lyon1.fr
+    Geoffry Krouchi                      geoffrey.krouchi@etu.univ-lyon1.fr
     Lee Kelvin                           l.s.kelvin@ljmu.ac.uk
     Brandon Kelly                        b.k.kelly@2017.ljmu.ac.uk
     Mohammad-Reza Khellat                moha.khe@gmail.com
