Crop prints warning and aborts nicely when catalog is empty
In catalog mode, the Crop program accepts a catalog to make many crops in
one command. However, when the catalog doesn't have any usable rows, it
crashes (segmentation fault).

Crop should print a warning and abort instead of an ugly segmentation
fault. I am now busy implementing the fix.

This bug was reported by Geoffry Krouchi.

This fixes bug #54284.

--- a/NEWS
+++ b/NEWS
@@ -37,6 +37,7 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   bug #54063: Match tests in make check fail randomly.
   bug #54186: MakeCatalog's --checkupperlimit not keeping output's name.
   bug #54188: MakeCatalog's Upperlimit not being sigma-clipped properly.
+  bug #54284: Crop segrault when catalog contains no data.
 
 
 
